# xsuite

./: .gitignore  .readthedocs.yaml  Dockerfile  README.md  build.os  contributors.txt  main.tex  make_changelog.py  make_release.sh  particlesmanip.rst  pyproject.toml  release.sh  requirements.txt  run_on_gh.py  run_pytest_tests.sh  run_release_tests.sh  run_specific_tests.sh  run_tests.sh  setup.py
.github/scripts/: analyze_result.py  entrypoint.sh  generate_summary.sh  install_branches.sh  run_tests.sh
.github/skills/xsuite/: SKILL.md
.github/skills/xsuite/references/: 01-installation-and-setup.md  02-environment-and-lattice-model.md  03-optics-twiss.md  04-matching.md  05-tracking.md  06-particles.md  07-collective-effects.md  08-collimation.md  09-synchrotron-radiation.md  10-advanced-topics.md  11-developer-guide.md  12-api-reference.md
.github/workflows/: accpoc.yaml  build_image_sh.yaml  cron_test_gh.yaml  cron_test_gh_omp.yaml  cron_test_gpu.yaml  cron_test_gpu_cl.yaml  cron_test_gpu_cuda.yaml  cron_test_sh_all.yaml  cron_test_sh_cpu.yaml  cron_test_sh_cpu_no_compile.yaml  cron_test_sh_cpu_omp.yaml  cron_test_sh_cpu_serial.yaml  cron_test_sh_xmask.yaml  cron_test_sh_xwakes_mpi.yaml  dailytest_sh.yaml  manual_test_gh.yaml  manual_test_gpu.yaml  manual_test_sh.yaml  release.yaml  test_gh.yaml  test_gpu.yaml  test_sh.yaml
docs/: .gitignore  .readthedocs.yaml  Makefile  acceleration.rst  apireference.rst  apixfields.rst  apixline.rst  apixobjects.rst  apixpart.rst  apixtrack.rst  autogeneration.rst  beambeam.rst  beamelements.rst  citing.rst  codes_lost_particles.rst  collective.rst  collective_intro.rst  collimation.rst  combined_cpu_gpu.rst  community.rst  conf.py  contexts.rst  contributors_acknowledgements.rst  deferred_expressions.rst  dev_guide_xtbe_data_structure.rst  dev_guide_xtbe_internal_record.rst  dev_guide_xtbe_lost_part_codes.rst  dev_guide_xtbe_prebuilt_kernels.rst  dev_guide_xtbe_tracking_code.rst  dev_guide_xtrack_beam_elements.rst  developer.rst  dynamic_aperture.rst  environment.rst  environment_api.rst  exciter.rst  external_material_codes.rst  fast_lattice_changes.rst  fieldmaps.rst  footprint.rst  freeze_longitudinal.rst  (+48 more)
docs/generated_code_snippets/: pipeline.py
docs/physics_manual/: aperture.tex  bb6d.tex  bbconfig.tex  bibliography.bib  compile.sh  physics_man.tex  spatial_boris.tex  xfields.tex  xtrack.tex
docs/physics_manual/figures/: rbend.pptx  transformations.pptx
scripts/: ipac_count_papers.py
xsuite/: __init__.py  cli.py  kernel_definitions.py  prebuild_kernels.py
xsuite.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
