[build-system]
requires = [
    'setuptools>=77',
    'setuptools-scm[toml]>=8',
    "xtrack==0.98.13",
    "xfields==0.25.9",
    "xcoll==0.9.4",
    "xobjects==0.5.12",
    "xdeps==0.10.10",
    "xpart==0.23.8",
    "numpy",
]
build-backend = 'setuptools.build_meta'

[project]
name = "xsuite"
authors = [
    {name = "Riccardo De Maria"},
    {name = "Giovanni Iadarola"},
    {name = "Szymon Åopaciuk"},
    {name = "et al."},
]
description = "Integrated suite for particle accelerator simulations."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
dependencies = [
    "xtrack==0.98.13",
    "xfields==0.25.9",
    "xcoll==0.9.4",
    "xobjects==0.5.12",
    "xdeps==0.10.10",
    "xpart==0.23.8",
]
dynamic = ["version"]

[project.urls]
Download = "https://pypi.python.org/pypi/xsuite"
"Bug Tracker" = "https://github.com/xsuite/xsuite/issues"
Documentation = 'https://xsuite.readthedocs.io/'
"Source Code" = "https://github.com/xsuite/xsuite"

[project.scripts]
xsuite-prebuild = "xsuite.cli:main"

[project.optional-dependencies]
notebooks = ['jupyter', 'ipympl', 'xplt']
full_env = ['cpymad', 'nafflib', 'pytest', 'pytest-mock', 'jupyter', 'ipympl', 'xplt', 'ipython']

[tool.setuptools_scm]
# empty for default configuration

# MANIFEST.in dictates which non-Python files are included in the sdist, and
# there we implicitly exclude the prebuilt kernels.
# As for the wheel (binary distribution), the prebuild kernels are created with
# a custom build_ext command in setup.py, and are not subject to filtering by
# `package-data` or `exclude-package-data`, so they will all be included.
[tool.setuptools]
packages = ["xsuite", "xsuite.lib"]

[tool.cibuildwheel]
skip = [
    # i686 is not needed or supported
    "*i686",
    # We don't need musl libc support
    "*musllinux*",
]
build-verbosity = 1
